tests/declaration_files_node/declaration_files_node.exp
Error --------------------------------------------------------------------------------------------- test_absolute.js:5:2

Cannot cast `B1.fun()` to string because number [1] is incompatible with string [2].

   test_absolute.js:5:2
   5| (B1.fun(): string); // Error number ~> string
       ^^^^^^^^

References:
   node_modules/B.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_absolute.js:5:12
   5| (B1.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- test_absolute.js:9:2

Cannot cast `B2.fun()` to string because number [1] is incompatible with string [2].

   test_absolute.js:9:2
   9| (B2.fun(): string); // Error number ~> string
       ^^^^^^^^

References:
   node_modules/B.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_absolute.js:9:12
   9| (B2.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:12:2

Cannot cast `C.fun()` to string because number [1] is incompatible with string [2].

   test_absolute.js:12:2
   12| (C.fun(): string); // Error number ~> string
        ^^^^^^^

References:
   node_modules/package_with_full_main/code.js.flow:3:24
    3| declare var fun: () => number;
                              ^^^^^^ [1]
   test_absolute.js:12:11
   12| (C.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:15:2

Cannot cast `D.fun()` to string because number [1] is incompatible with string [2].

   test_absolute.js:15:2
   15| (D.fun(): string); // Error number ~> string
        ^^^^^^^

References:
   node_modules/package_with_partial_main/code.js.flow:3:32
    3| declare export function fun(): number;
                                      ^^^^^^ [1]
   test_absolute.js:15:11
   15| (D.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:18:2

Cannot cast `E.fun()` to string because number [1] is incompatible with string [2].

   test_absolute.js:18:2
   18| (E.fun(): string); // Error number ~> string
        ^^^^^^^

References:
   node_modules/package_with_no_package_json/index.js.flow:3:32
    3| declare export function fun(): number;
                                      ^^^^^^ [1]
   test_absolute.js:18:11
   18| (E.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:21:2

Cannot cast `F.fun()` to string because number [1] is incompatible with string [2].

   test_absolute.js:21:2
   21| (F.fun(): string); // Error number ~> string
        ^^^^^^^

References:
   node_modules/package_with_dir_main/dir/index.js.flow:3:31
    3| declare export var fun: () => number;
                                     ^^^^^^ [1]
   test_absolute.js:21:11
   21| (F.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- test_relative.js:5:2

Cannot cast `A1.fun()` to string because number [1] is incompatible with string [2].

   test_relative.js:5:2
   5| (A1.fun(): string); // Error number ~> string
       ^^^^^^^^

References:
   A.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_relative.js:5:12
   5| (A1.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- test_relative.js:9:2

Cannot cast `A2.fun()` to string because number [1] is incompatible with string [2].

   test_relative.js:9:2
   9| (A2.fun(): string); // Error number ~> string
       ^^^^^^^^

References:
   A.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_relative.js:9:12
   9| (A2.fun(): string); // Error number ~> string
                 ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_relative.js:13:2

Cannot cast `CJS` to number because string [1] is incompatible with number [2].

   test_relative.js:13:2
   13| (CJS: number); // Error: string ~> number
        ^^^

References:
   CJS.js.flow:3:25
    3| declare module.exports: string;
                               ^^^^^^ [1]
   test_relative.js:13:7
   13| (CJS: number); // Error: string ~> number
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_relative.js:16:1

Importing from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of
`./not_flow`? (`untyped-import`)

   16| require('./not_flow');
       ^^^^^^^^^^^^^^^^^^^^^



Found 10 errors
